# elasticsearch_client

./: .gitignore  CMakeLists.txt  Client.cpp  Client.cppm  Client.h  DOCKERFILE  README.md  logger.cpp  logger.h  main.cpp  queries.cpp  queries.h
utilities/: configfileHandler.cpp  configfileHandler.cppm  configfileHandler.h  environment.cpp  environment.cppm  environment.h  queries.cpp  queries.h  utilFunctions.cpp  utilFunctions.cppm  utilFunctions.h  validationHandler.cpp  validationHandler.h
utilities/logger/: local_logger.cppm  logger.cpp  logger.h
utilities/querybuilder/: queries.cpp  queries.cppm  queries.h  searchQuery.cpp  searchQuery.cppm  searchQuery.h
